# castmail2list

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  alembic.ini  config.example.yaml  config.yaml  gunicorn.conf.py  mise.toml  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/actions/poetrybuild/: action.yaml
.github/actions/uvbuild/: action.yaml
.github/workflows/: publish.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
castmail2/static/css/: custom.css  custom.css.map
castmail2list/: __init__.py  app.py  config.py  config_schema.json  config_schema.json.license  extensions.py  forms.py  gunicorn.conf.py  gunicorn.py  imap_worker.py  local_secrets.py  mailer.py  models.py  routes.py  seed_default.json  seeder.py  services.py  status.py  utils.py  views.py  wsgi.py
castmail2list/migrations/versions/: 0d19dc3b6347_list_add_avoid_duplicates_setting.py  0d9ddee274ff_list_add_sender_authentication_passwords.py  0df3b2586a2c_list_from_addr_override_from_addr_mode_.py  2cb6c660beee_message_add_bounce_info_column.py  2f9a173728b0_list_from_addr_from_addr_override.py  7e6ba9b0ffe1_list_add_from_addr_setting.py  88c21e3e1c3b_list_add_from_settings_for_outside_.py  a35bd3d394bf_message_add_status_column.py  b092089c847f_list_make_id_a_string_rename_name_.py  c4ad571fe783_composite_pk_for_email_in.py  cd01cdfd5ead_message_bounce_info_error_info.py  e73f5a16f3fd_list_display_nullable.py  fee7c71e2327_subscriber_bounce_not_nullable.py
castmail2list/static/js/: themeToggle.js
castmail2list/static/scss/: custom.scss  main.scss
castmail2list/static/scss/pico/components/: _modal.scss
castmail2list/templates/: account.html  add_list.html  base.html  confirm_action.html  edit_list.html  edit_subscriber.html  flash.html  index.html  list_add.html  list_edit.html  list_subscriber_edit.html  list_subscribers.html  list_subscribers_manage.html  lists.html  login.html  macros.html  messages.html  settings.html  subscriber.html  subscribers.html
castmail2list/templates/lists/: add.html  deactivated.html  edit.html  index.html  macros.html  subscriber_edit.html  subscribers_manage.html
castmail2list/templates/logs/: index.html
castmail2list/templates/messages/: bounces.html  detail.html  detail_sent.html  index.html
castmail2list/templates/subscribers/: by_email.html  index.html
castmail2list/translations/de/LC_MESSAGES/: messages.po
castmail2list/views/: __init__.py  api.py  auth.py  errors.py  general.py  lists.py  logs.py  messages.py  subscriber.py  subscribers.py
doc/: api.md  api_documentation.md  modes_and_headers.md  security_practices.md  sender_authorization.md
migrations/versions/: 09c5b62210f8_subscribers_add_name_and_comment.py  13cf2ed28421_change_nullables.py  2acf401ffbab_list_allowed_sender_from_text_to_json.py  373e20626e35_list_add_allowed_senders.py  3fbb6e4326f6_list_add_deleted_columns.py  6ae40f033710_list_add_mode_column.py  6b79391fd293_subscribers_change_nullable.py  6c835de41e89_user_add_role_column.py  78eb159226e6_list_add_only_subscribers_send.py  b6264cc54922_messages_add_header_column.py  f0c4044eb653_user_fix_columns.py  fc06729c4e1d_.py
scripts/: bulk-users.py
tests/: __init__.py  conftest.py  test_forms.py  test_imap_worker.py  test_mailer.py  test_routes.py  test_templates.py  test_utils.py
tests/bounces/: REUSE.toml  exceeds-size.eml  mailbox-full.eml
